relations-plugin integration

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "url": "https://www.viamage.com/"
   },
   "dependencies": {
-    "@live-change/framework": "^0.5.7"
+    "@live-change/framework": "^0.5.7",
+    "@live-change/relations-plugin": "^0.1.8"
   }
 }
